<resources>
    <string name="app_name">Street Issues</string>
    <string name="issues_list">Issues List </string>
    <string name="issues_on_map">Maps</string>
    <string name="file_issue">Report</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_sample">5 May 2019</string>
    <string name="main_interface">Traffic Reporting Application</string>
    <string name="adding_interface">Submit Report </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_photo">Please Choose Your Photo....</string>
    <string name="photo_selection_error">photo not laoded</string>
    <string name="uploading_photo">Uploading Photo..........</string>
    <string name="todo">TODO</string>
    <string name="dd_issues_successful">The Issues Added ..</string>
    <string name="dd_issues_faild">Added Issues Failed !</string>
    <string name="uploading_task_failed">Uploading Task Failed !</string>
    <string name="uploadin_photo_failed">Uploading photo Failed !</string>
    <string name="error_msg_name">Tittle is empty...</string>
    <string name="error_msg_description">Description is empty....</string>
    <string name="error_msg_date">Date is empty......</string>
    <string name="English">En</string>
    <string name="Arabic">عربي</string>
    <string name="location_selection_error">Please Select the Location</string>


</resources>
